--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -1,26 +1,26 @@
 <resources>
     <string name="app_name">Almacen CortinApp</string>
-    <string name="text_codigo">Código de Venta</string>
-    <string name="text_fecha">Fecha de venta</string>
+    <string name="text_codigo">Codigo de Venta</string>
+    <string name="text_fecha">Saldo actual</string>
     <string name="text_abono">Valor abonado</string>
-    <string name="text_saldo">Saldo actual</string>
-    <string name="text_registro">Registro de Abonos</string>
+    <string name="text_saldo">Fecha de venta</string>
+    <string name="text_registro">REGISTRO DE ABONOS</string>
     <string name="text_username">Nombre de usuario</string>
     <string name="text_password">Contraseña</string>
     <string name="hint_password">Tu contraseña</string>
     <string name="text_action_search">Buscar</string>
-    <string name="text_action_settings">Configuración</string>
-    <string name="text_action_logout">Cerrar sesión</string>
-    <string name="prueba_git">Cerrar sesión</string>
-    <string name="botonLogin">Iniciar Sesión</string>
+    <string name="text_action_settings">Configuracion</string>
+    <string name="text_action_logout">Cerrar sesion</string>
+    <string name="prueba_git">Logout</string>
+    <string name="botonLogin">Login</string>
 
-    <string name="text_identificacion">Número de Identificación</string>
+    <string name="text_identificacion">Numero de Identificacion</string>
     <string name="text_nombre">Nombres</string>
     <string name="text_apellidos">Apellidos</string>
-    <string name="text_correo">Correo Electrónico</string>
+    <string name="text_correo">Correo Electronico</string>
     <string name="text_registroven">Registro de Vendedores</string>
 
-    <string name="tv1">Primer Actividad</string>
+    <string name="tv1">Primer Activity</string>
     <string name="BotonSiguiente">Siguiente</string>
     <string name="BotonVolver">Volver</string>
     <string name="text_error">Error</string>
@@ -29,7 +29,7 @@
     <string name="text_registroventa">Registro de Ventas</string>
     <string name="text_ancho">Ancho de Cortina</string>
     <string name="text_alto">Alto de Cortina</string>
-    <string name="text_area">Área de cortina</string>
+    <string name="text_area">Area de cortina</string>
     <string name="text_precio">Precio de Cortina</string>
     <string name="text_cuotasemanal">Cuota Semanal</string>
     <string name="text_saldocliente">Saldo</string>
@@ -42,11 +42,11 @@
     <string name="text_registroarticulo">Registro de Articulos</string>
     <string name="BotonVolveralinicio">Volver Al Inicio</string>
 
-    <string name="text_codigorticulo">Código del Artículo</string>
-    <string name="text_colorarticulo">Color del Artículo</string>
-    <string name="text_valormetrocuadrado">Valor por metro cuadrado</string>
-    <string name="hint">email@dominio.com</string>
-    <string name="login">Iniciar Sesión</string>
+    <string name="text_codigorticulo">Item code</string>
+    <string name="text_colorarticulo">Item Color</string>
+    <string name="text_valormetrocuadrado">Value per square meter</string>
+    <string name="hint">email@domain.com</string>
+    <string name="login">LOGIN</string>
 
 
 
